// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserGreetingDisplay renders correctly for a logged-in user 1`] = `
<div>
  <div
    class="MuiBox-root css-h71gmh"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-16xl4zq-MuiTypography-root"
    >
      Welcome, Test User!
    </h5>
  </div>
</div>
`;

exports[`UserGreetingDisplay renders correctly for a logged-out user 1`] = `
<div>
  <div
    class="MuiBox-root css-h71gmh"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-16xl4zq-MuiTypography-root"
    >
      Please log in to continue
    </h5>
  </div>
</div>
`;
